Version 1.1
===========

New features
------------

- Accidentals: sharp, double sharp, natural, flat, double flat.

Bugs fixed
----------

- Better bar lines processing. Left and right bar lines from XML are
  merged to catch both voltas and repeats.
