@@ -6,6 +6,8 @@ New features
 
 - Accidentals: sharp, double sharp, natural, flat, double flat.
 
+- Chord (non-spacing) notes.
+
 Bugs fixed
 ----------
 
